Done xửa lý hiển thị image mặc định cho cùng product.